--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ My Web Page
    div{ text-align: left;}
    .nb{ font-style: italic; }
    body {
-  background-image:image: url("jamea pic.jpg");;
+  background-image:image: url("jamea pic.jpg");
 }
 </style>
 </Head>
