--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@ My Web Page
    <h3>
 Hello!
 <P>
-My name is Nooruddin M. Aliasgar and I am studying web designing. This is my first page that I have created. I study in 
-<span class="nb">  Al Jamea tus Saifiyah.
+My name is 
+<span class="nb">  Nooruddin M. Aliasgar Bhaiwala.
 </span>
-I have just started learning web designing and I find it very amazing.
+I am in darajah khamesa.
 </P>
+    <div> Tr. no: 25720
+      </div>
+      I have many hobbies such as painting, playing table tennis, reading novels and many more.
    </h3>
 </div>
 
