--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@ My name is
 </span>
 I am in darajah khamesa.
 <br>My tr. no is 25720
+<br>I have many hobbies such as painting, playing table tennis, reading novels and many more.
       </P>
-  
-      I have many hobbies such as painting, playing table tennis, reading novels and many more.
    </h3>
 </div>
 
