--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
+
 <html>
 <Head>
-<title>
+<link rel="stylesheet" href="Main.css">
 
+<title>
 My Web Page
 </title>
-<style> 
-   div{ text-align: left;}
-   .nb{ font-style: italic; }
-   body {
-  background-image:linear-gradient(red, yellow, blue);;
-}
 </style>
 </Head>
 <body>
-<h1>
-My Web Page
-</h1>
+<ul>
+ <li> <a> Home </a> </li>
+ <li> <a> Info </a> </li>
+ <li> <a> Contact Us </a> </li>
+</ul>
 <div>
-   <h3>
+<h1>
+<header>
+This is my first web page
+</h1>
+</header>
+<article>
 Hello!
 <P>
 My name is 
@@ -27,16 +30,10 @@ I am in darajah khamesa.
 <br>My tr. no is 25720
 <br>I have many hobbies such as painting, playing table tennis, reading novels and many more.
       </P>
-   </h3>
+</article>
+
+Contact Info : +919876543210 &nbsp abcd@efg.com
+
 </div>
-
-
-
 </body>
-
-
-
-
-
-
 </html>
