--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ My Web Page
 </Head>
 <body>
 <ul>
- <li> <a> Home </a> </li>
- <li> <a> Info </a> </li>
- <li> <a> Contact Us </a> </li>
+ <li>  Home  </li>
+ <li>  Info  </li>
+ <li>  Contact Us  </li>
 </ul>
 <div>
 <h1>
