--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ My Web Page
 </Head>
 <body>
 <ul>
- <li>  Home  </li>
- <li>  Info  </li>
- <li>  Contact Us  </li>
+ <li> <a> Home </a> </li>
+ <li> <a> Info </a> </li>
+ <li> <a> Contact Us </a> </li>
 </ul>
 <div>
 <h1>
@@ -27,7 +27,7 @@ My name is
 <span class="nb">  Nooruddin M. Aliasgar Bhaiwala.
 </span>
 I am in darajah khamesa.
-My tr. no is 25720.
+<br>My tr. no is 25720
 <br>I have many hobbies such as painting, playing table tennis, reading novels and many more.
       </P>
 </article>
