--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>
 My Web Page
 </title>
-</style>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </Head>
 <body>
 <ul>
